# python_task_4

./: pyproject.toml
src/aws_test/: main.py
